add_choice_city

--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -1,13 +1,20 @@
 body {
-    background: khaki;
+    background: black;
+    color: white;
+    font-family: Roboto sans-serif;
 }
 
-.select {
-    border: 1px solid black;
+.select span.main {
+    border: 1px solid white;
+    display: inline-block;
+    min-height: 20px;
+    min-width: 70px;
+    cursor: pointer;
 }
 
 .items {
     position: absolute;
     padding: 5px;
-    border: 1px solid black;
+    border: 1px solid white;
+    cursor: pointer;
 }
